Fix the footer spacing relative to the scroll navbar

--- a/src/sass/_theme_layout.sass
+++ b/src/sass/_theme_layout.sass
@@ -27,13 +27,14 @@ html
     line-height: $base-font-size * 2
     padding: 0 $base-font-size
 
+.wy-menu-footer
+  height: 10%
+
 .wy-menu-footer-logo
   display: block
   margin-left: auto
   margin-right: auto
-  position: absolute
-  bottom: 0
-  left: ($nav-desktop-width / 3) + 25
+  padding-top: $gutter;
 
 .wy-menu-vertical
   width: $nav-desktop-width
@@ -280,7 +281,7 @@ html
   position: relative
   overflow-x: hidden
   overflow-y: scroll
-  height: 100%
+  height: 90%
 
 .wy-nav-top
   display: none
